[workspace.package]
version = "0.2.0-dev.2"
edition = "2021"
description = "The TEA SDK"
authors = [
    "Kevin Zhang <kevin.zhang.canada@gmail.com>",
    "Yan Mingzhi <realraindust@gmail.com>",
    "Jacky.li <liyangwood@gmail.com>",
    "Alsein Xiang <xyh951115@live.com>",
]
license-file = "LICENSE"
keywords = ["tea", "tapp", "wasm", "web3"]
categories = ["cryptography::cryptocurrencies", "development-tools", "wasm"]
homepage = "https://teaproject.org/"
repository = "https://github.com/tearust/sdk/"


[package]
name = "tea-sdk"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
exclude = ["actorx/*", "rust-toolchain.toml", ".rustfmt.toml", ".gitignore"]

[dependencies]
tea-codec = { version = "0.2.0-dev.2", path = "codecs/tea-codec" }

tea-actorx-core = { version = "0.2.0-dev.2", path = "actorx/actorx-core" }
tea-actorx-host = { version = "0.2.0-dev.2", path = "actorx/actorx-host", optional = true }
tea-actorx-runtime = { version = "0.2.0-dev.2", path = "actorx/actorx-runtime", optional = true }
tea-actorx-signer = { version = "0.2.0-dev.2", path = "actorx/actorx-signer", optional = true }

tea-actor-txns = { version = "0.2.0-dev.2", path = "codecs/actor-txns" }
tea-runtime-codec = { version = "0.2.0-dev.2", path = "codecs/runtime-codec" }
tea-solc-codec = { version = "0.2.0-dev.2", path = "codecs/solc-codec" }
tea-tapp-common = { version = "0.2.0-dev.2", path = "codecs/tapp-common" }
tea-vmh-codec = { version = "0.2.0-dev.2", path = "codecs/vmh-codec" }

tea-system-actors = { version = "0.2.0-dev.2", path = "system-actors", optional = true }

tea-wasm-actor-utils = { version = "0.2.0-dev.2", path = "utils/wasm-actor-utils", features = [
    "http",
], optional = true }
tea-wasm-client-actor-utils = { version = "0.2.0-dev.2", path = "utils/wasm-client-actor-utils", optional = true }

[workspace]
resolver = "2"
members = [
    "codecs/*",
    "codecs/tea-codec/macros",
    "actorx/actorx-*",
    "actorx/examples/*",
    "system-actors",
    "utils/*",
]

[features]
default = []
wasm = [
    "tea-actorx-runtime",
    "system-actors",
    "tea-wasm-actor-utils",
    "tea-wasm-client-actor-utils",
]
host = ["tea-actorx-host", "system-actors"]
system-actors = ["tea-system-actors"]
signer = ["tea-actorx-signer"]
mock = ["wasm", "tea-actorx-runtime/mock"]
unlimited = ["tea-actorx-host/unlimited"]
nitro = ["tea-vmh-codec/nitro", "tea-system-actors/nitro"]
simulator = ["tea-vmh-codec/simulator", "tea-system-actors/simulator"]
__test = [
    "tea-runtime-codec/__test",
    "tea-solc-codec/__test",
    "tea-tapp-common/__test",
    "tea-vmh-codec/__test",
    "tea-system-actors/__test",
    "tea-wasm-actor-utils/__test",
    "tea-wasm-client-actor-utils/__test",
]

[workspace.dependencies]
base64 = "0.13.0"
bincode = "1.2.0"
bytes = "1.4.0"
chrono = { version = "0.4.22", features = ["serde"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
dashmap = "5.4"
ed25519-dalek = "1.0.0"
futures = "0.3.25"
gluesql-core = { version = "0.13.1", features = [
    "transaction",
    "index",
    "alter-table",
] }
hex = "0.4.0"
http = "0.2.8"
http-body = "0.4.5"
httparse = "1.8.0"
hyper = "0.14.23"
impl-trait-for-tuples = "0.2.2"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["std", "serde"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
parking_lot = "0.12.1"
primitive-types = { version = "0.12.1", features = ["serde"] }
prost = "0.11.0"
regex = { version = "1.7.0" }
serde = { version = "1.0.147", features = ["derive", "rc"] }
serde_bytes = "0.11.3"
serde_derive = "1.0.147"
serde_json = "1.0.87"
serde_yaml = "0.9.19"
sha2 = "0.10.0"
strum = "0.24.1"
strum_macros = "0.24.3"
smallvec = { version = "1.9.0", features = [
    "serde",
    "write",
    "union",
    "const_generics",
    "const_new",
] }
thiserror = "1.0.22"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tokio = { version = "1.21.2" }
once_cell = "1.17.0"
openssl = { version = "0.10", features = ["vendored"] }
wasmer = { version = "3.0.1", features = ["tracing"] }
wasmer-middlewares = "3.0.1"
wasmer-types = "3.0.1"
