[workspace.package]
version = "0.2.0-dev.8"
edition = "2021"
description = "The TEA SDK"
authors = [
    "Kevin Zhang <kevin.zhang.canada@gmail.com>",
    "Yan Mingzhi <realraindust@gmail.com>",
    "Jacky.li <liyangwood@gmail.com>",
    "Alsein Xiang <xyh951115@live.com>",
]
license-file = "LICENSE"
keywords = ["tea", "tapp", "wasm", "web3"]
categories = ["cryptography::cryptocurrencies", "development-tools", "wasm"]
homepage = "https://teaproject.org/"
repository = "https://github.com/tearust/sdk/"


[package]
name = "tea-sdk"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
exclude = ["actorx/*", "rust-toolchain.toml", ".rustfmt.toml", ".gitignore"]

[dependencies]
tea-codec = { version = "0.2.0-dev.8", path = "codecs/tea-codec" }

tea-actorx-core = { version = "0.2.0-dev.8", path = "actorx/actorx-core" }
tea-actorx-host = { version = "0.2.0-dev.8", path = "actorx/actorx-host", optional = true }
tea-actorx-runtime = { version = "0.2.0-dev.8", path = "actorx/actorx-runtime", optional = true }
tea-actorx-signer = { version = "0.2.0-dev.8", path = "actorx/actorx-signer", optional = true }
tea-actorx-macros = { version = "0.2.0-dev.8", path = "actorx/actorx-macros", optional = true }

tea-runtime-codec = { version = "0.2.0-dev.8", path = "codecs/runtime-codec" }

tea-system-actors = { version = "0.2.0-dev.8", path = "system-actors", optional = true }

tea-wasm-actor-utils = { version = "0.2.0-dev.8", path = "utils/wasm-actor-utils", optional = true }

tokio = { workspace = true, features = ["macros"], optional = true }

[workspace]
resolver = "2"
members = [
    "codecs/*",
    "codecs/tea-codec/macros",
    "actorx/actorx-*",
    "actorx/examples/*",
    "system-actors",
    "utils/*",
]

[features]
default = []
wasm = ["tea-actorx-runtime", "system-actors", "tea-wasm-actor-utils"]
host = ["tea-actorx-host", "system-actors"]
system-actors = ["tea-system-actors", "vmh"]
vmh = ["tea-runtime-codec/vmh"]
signer = ["tea-actorx-signer"]
mock = ["wasm", "tea-actorx-runtime/mock", "tea-actorx-macros", "tokio"]
unlimited = ["tea-actorx-host/unlimited"]
nitro = ["tea-runtime-codec/nitro", "tea-system-actors/nitro"]
simulator = ["tea-runtime-codec/simulator", "tea-system-actors/simulator"]
dev = ["tea-runtime-codec/dev"]
__test = [
    "tea-runtime-codec/__test",
    "tea-system-actors/__test",
    "tea-wasm-actor-utils/__test",
]

[workspace.dependencies]
base64 = "0.13.1"
bincode = "1.3.3"
bytes = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive", "env"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.7"
dashmap = "5.4"
ed25519-dalek = "1.0.1"
ethereum-types = "0.14.1"
futures = "0.3.26"
gluesql-core = { version = "0.13.1", features = [
    "transaction",
    "index",
    "alter-table",
] }
hex = "0.4.3"
http = "0.2.9"
http-body = "0.4.5"
http-serde = "1.1.2"
httparse = "1.8.0"
hyper = "0.14.24"
impl-trait-for-tuples = "0.2.2"
lazy_static = "1.4.0"
leb128 = "0.2.5"
log = { version = "0.4.17", features = ["std", "serde"] }
mocktopus = "0.8.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
num_enum = "0.5.11"
once_cell = "1.17.1"
openssl = { version = "0.10.45", features = ["vendored"] }
parking_lot = "0.12.1"
primitive-types = { version = "0.12.1", features = ["serde"] }
prost = "0.11.8"
regex = "1.7.1"
rustc-hex = "2.1.0"
serde = { version = "1.0.153", features = ["derive", "rc"] }
serde_bytes = "0.11.9"
serde_json = "1.0.87"
serde_yaml = "0.9.19"
sha2 = "0.10.0"
strum = { version = "0.24.1", features = ["derive"] }
smallvec = { version = "1.10.0", features = [
    "serde",
    "write",
    "union",
    "const_generics",
    "const_new",
] }
thiserror = "1.0.39"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tokio = { version = "1.26.0" }
u256-literal = "1.2.1"
wasmer = { version = "3.1.1", features = ["tracing"] }
wasmer-middlewares = "3.1.1"
wasmer-types = "3.1.1"
zstd = "0.12.3"
