[package]
name = "tea-actorx"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "sign"
required-features = ["sign-bin"]

[[bin]]
name = "worker"
required-features = ["worker"]

[dependencies]
tea-codec = { version = "0.3.0-dev.7", path = "../codecs/tea-codec" }

serde = { workspace = true }
bincode = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
primitive-types = { workspace = true }
mocktopus = { workspace = true }

tokio = { workspace = true, features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
], optional = true }
async-channel = { version = "1.8.0", optional = true }
num_cpus = { version = "1.15.0", optional = true }
command-fds = { version = "0.2.2", features = ["tokio"], optional = true }
tokio-util = { workspace = true, features = ["io", "io-util"], optional = true }
futures = { version = "0.3.28", optional = true }
base64 = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
leb128 = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }
tabled = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

wasmer = { workspace = true, optional = true }
wasmer-middlewares = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15"

[features]
default = ["sdk"]
sdk = []
worker = [
    "sign",
    "wasmer",
    "tokio",
    "tokio/io-util",
    "tokio/io-std",
    "tokio/net",
    "tokio/time",
    "tokio/parking_lot",
    "tokio/sync",
    "async-channel",
    "futures",
    "num_cpus",
    "tea-codec/runtime",
]
sign = ["base64", "serde_yaml", "openssl", "leb128", "zstd"]
sign-bin = ["sign", "clap", "tokio"]
host = [
    "sdk",
    "tokio",
    "tokio/io-util",
    "tokio/net",
    "tokio/parking_lot",
    "tokio/process",
    "tokio/time",
    "tokio/sync",
    "tokio-util",
    "command-fds",
    "sysinfo",
    "tabled",
]
wasm = ["sdk", "futures"]
nitro = []
metering = []
verbose_log = []
backtrace = ["tea-codec/backtrace"]
llvm = ["worker", "wasmer/llvm"]
timeout = []
track = ["timeout"]
__test = ["rand"]
