[package]
name = "tea-system-actors"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { version = "0.2.0-dev.22", path = "../codecs/tea-codec" }
tea-runtime-codec = { version = "0.2.0-dev.22", path = "../codecs/runtime-codec", features = [
    "vmh",
] }
tea-actorx2 = { version = "0.2.0-dev.19", path = "../actorx2" }

serde = { workspace = true }
strum = { workspace = true }

[features]
nitro = []
__test = []
