[package]
name = "tea-system-actors"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { version = "0.3.0-dev.7", path = "../codecs/tea-codec" }
tea-runtime-codec = { version = "0.3.0-dev.7", path = "../codecs/runtime-codec", features = [
    "vmh",
] }
tea-actorx = { version = "0.3.0-dev.7", path = "../actorx" }

serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[features]
nitro = []
__test = []
