[package]
name = "tea-actorx-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tea-codec = { path = "../../codecs/tea-codec" }

serde = { workspace = true }
wasmer = { workspace = true, optional = true }
wasmer-types = { workspace = true, optional = true }
base64 = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

[features]
host = ["wasmer", "wasmer-types"]
