[package]
name = "tea-actorx-core"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { version = "0.2.0-dev.11", path = "../../codecs/tea-codec" }

serde = { workspace = true }
wasmer = { workspace = true, optional = true }
wasmer-types = { workspace = true, optional = true }
base64 = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

[features]
host = ["wasmer", "wasmer-types"]
