[package]
name = "tea-actorx-host"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { version = "0.2.0-dev.9", path = "../../codecs/tea-codec", features = [
    "runtime",
] }
tea-actorx-core = { version = "0.2.0-dev.9", path = "../actorx-core", features = [
    "host",
] }
tea-actorx-signer = { version = "0.2.0-dev.9", path = "../actorx-signer" }

tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
wasmer = { workspace = true }
wasmer-middlewares = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
crossbeam = { workspace = true }

[features]
unlimited = []
