[package]
name = "tea-actorx-runtime"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { version = "0.2.0-dev.11", path = "../../codecs/tea-codec" }
tea-actorx-core = { version = "0.2.0-dev.11", path = "../actorx-core" }
tea-actorx-host = { version = "0.2.0-dev.11", path = "../actorx-host", optional = true }

serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
thiserror = { workspace = true }
# TODO: replace lazy_static with once_cell
lazy_static = "1.4.0"
once_cell = { workspace = true }


[features]
mock = ["tea-actorx-host"]
no-mock = []
analyzer = ["no-mock"]
checked = ["tea-codec/checked"]
