[package]
name = "tea-actorx-signer"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "tas"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
tea-codec = { version = "0.2.0-dev.3", path = "../../codecs/tea-codec" }
tea-actorx-core = { version = "0.2.0-dev.3", path = "../actorx-core" }

tokio = { workspace = true, features = ["full"] }
leb128 = "0.2.5"
base64 = "0.13.1"
zstd = "0.11.2"
serde = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }
openssl = { workspace = true }
thiserror = { workspace = true }
primitive-types = { workspace = true }
rustc-hex = "2.1.0"
clap = { version = "4.0.8", features = ["derive"], optional = true }
