[package]
name = "tea-actorx-signer"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "tas"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
tea-codec = { version = "0.2.0-dev.4", path = "../../codecs/tea-codec" }
tea-actorx-core = { version = "0.2.0-dev.4", path = "../actorx-core" }

tokio = { workspace = true, features = ["full"] }
leb128 = { workspace = true }
base64 = { workspace = true }
zstd = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }
openssl = { workspace = true }
thiserror = { workspace = true }
primitive-types = { workspace = true }
rustc-hex = { workspace = true }
clap = { workspace = true, optional = true }
