[package]
name = "tea-actorx2-worker"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
tea-codec = { version = "0.2.0-dev.16", path = "../../codecs/tea-codec" }
tea-actorx2-core = { version = "0.2.0-dev.16", path = "../core", features = [
    "sign",
    "host",
    "worker",
] }

tokio = { workspace = true, features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "parking_lot",
] }
bincode = { workspace = true }
strum = { workspace = true }
wasmer = { workspace = true }
wasmer-middlewares = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[features]
llvm = ["wasmer/llvm"]
