[package]
name = "tea-actor-txns"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
sha2 = { workspace = true }

tea-runtime-codec = { path = "../runtime-codec" }
tea-codec = { path = "../tea-codec" }
tea-tapp-common = { path = "../tapp-common" }
