[package]
name = "tea-runtime-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2.0"
serde_derive = "1.0"
serde_bytes = "0.11.3"
prost = "0.11.0"
base64 = "0.13.0"
hex = "0.4.0"
log = { version = "0.4", features = ["std", "serde"] }
thiserror = "1.0.22"

tea-codec = { version = "0.2.0-dev.2", path = "../tea-codec" }

[dev-dependencies]
structopt = "0.3.12"
serde_json = "1.0.50"

[features]
__test = []
