[package]
name = "tea-runtime-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
num-traits = { workspace = true }
num-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
serde_bytes = { workspace = true }
prost = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
http = { workspace = true }
http-serde = { workspace = true }
thiserror = { workspace = true }
ethereum-types = { workspace = true }
primitive-types = { workspace = true }
u256-literal = { workspace = true }
strum = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true, optional = true }
num_enum = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

tea-codec = { version = "0.2.0-dev.18", path = "../tea-codec" }

[dev-dependencies]
structopt = "0.3.12"

[build-dependencies]
prost-build = { version = "0.11.1", optional = true }

[features]
dev = []
vmh = ["serde_yaml", "num_enum", "chrono", "clap", "prost-build"]
nitro = []
simulator = []
__test = []
