[package]
name = "solc-codec"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
ethereum-types = "0.14.1"
primitive-types = { workspace = true }

tea-codec = { path = "../tea-codec" }
runtime-codec = { path = "../runtime-codec" }

[features]
__test = []
