[package]
name = "tea-tapp-common"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]

serde = { version = "1.0.106", features = ["derive"] }
base64 = "0.13.0"
u256-literal = "1.2.0"
serde_derive = "1.0.106"
serde_json = "1.0.55"
strum = { workspace = true }
strum_macros = { workspace = true }
primitive-types = { workspace = true }
hex = { workspace = true }

tea-runtime-codec = { version = "0.2.0-dev.2", path = "../../codecs/runtime-codec" }
tea-codec = { version = "0.2.0-dev.2", path = "../tea-codec" }
thiserror = "1"

[features]
__test = []
